tests/checker/fail/type_definition_ordering_violation.can
Zebra = String

Apple = String

Unit => Program {
    "ok".print()
}
